# Lynxer-Signature-Implementation

./: README.md
opt/: .gitignore  README.md  aes.hpp  api.cpp.in  constants.hpp  faest.cpp  faest.inc  faest_keys.hpp  faest_keys.inc  hash.hpp  lynx_constants.hpp  lynx_frobenius_consts.hpp  lynx_l3_consts.hpp  lynx_matrices.hpp  lynx_owf.hpp  meson.build  owf_proof.cpp  owf_proof.hpp  owf_proof.inc  parameters.hpp  poly2d.hpp  polynomials_constants.hpp  prgs.hpp  quicksilver.hpp  small_vole.cpp  util.hpp  vector_com.inc  vole_commit.cpp
opt/avx2/: aes_impl.cpp  block_impl.hpp  polynomials_impl.hpp  transpose_secpar_impl.hpp
opt/scripts/: benchmark-local.sh  plot-bench-results.py
opt/test/: bavc_tvs_from_ref.hpp  bench_api.cpp  bench_components.cpp  bench_leaf_hash.cpp  bench_variants.cpp  meson.build  test.hpp  test_aes.cpp  test_faest.cpp  test_faest_v2_tvs.cpp  test_gfsmall.cpp  test_owf_proof.cpp  test_profile_sign.cpp  test_universal_hash.cpp  test_vector_com.cpp  vole_tvs_from_ref.hpp
opt/tools/: Makefile  gen_frobenius_matrices.py  gen_lynx_l3_matrices.py
ref/: .gitignore  README.md  aes.c  bavc.c  bench.sh  faest_impl.c  faest_param.c.in  fields.c  fields.h  hash_shake.h  instances.c  instances.h  lynx_frob_consts.h  lynx_matrices.c  lynx_matrices.h  lynx_owf.c  lynx_owf_consts.h  lynx_proof.c  lynx_proof.h  meson.build  meson_options.txt  owf.c  owf.h  random_oracle.c  universal_hashing.c  universal_hashing.h
ref/faest_128f/: meson.build
ref/faest_128s/: meson.build
ref/faest_192f/: meson.build
ref/faest_192s/: meson.build
ref/faest_256f/: meson.build
ref/faest_256s/: meson.build
ref/faest_em_128f/: meson.build
ref/faest_em_128s/: meson.build
ref/faest_em_192f/: meson.build
ref/faest_em_192s/: meson.build
ref/faest_em_256f/: meson.build
ref/faest_em_256s/: meson.build
ref/faest_lynx_128f/: meson.build
ref/faest_lynx_128s/: meson.build
ref/faest_lynx_192f/: meson.build
ref/faest_lynx_192s/: meson.build
ref/faest_lynx_256f/: meson.build
ref/faest_lynx_256s/: meson.build
ref/faest_lynx_384f/: meson.build
ref/faest_lynx_384s/: meson.build
ref/faest_lynx_512f/: meson.build
ref/faest_lynx_512s/: meson.build
ref/genmat/: README.md  meson.build
ref/genmat/exec/: meson.build
ref/genmat/exec/genMat/: LinPolyGF2E.cpp  LinPolyGF2E.h  mainMatTest.cpp
ref/genmat/include/: Common.hpp  NtlCommon.h  meson.build
ref/genmat/src/: Common.cpp  NtlCommon.cpp  meson.build
ref/lynx-design/parameter/: constant.txt
ref/sha3/fips202-ref/: fips202.c  fips202.h
ref/stat_test/: Makefile  README.md  runtest_mar11.sh  runtest_mar9.sh  stat_test_gen.c  stat_test_owf.c  stat_test_owf.h
ref/tests/: aes_prove.cpp  basic.cpp.in  bavc.cpp  bavc_tvs.hpp  faest_tvs.hpp  generate_bavc_tv.cpp  generate_owf_tv.cpp  generate_vole_tv.cpp  instances.cpp  instances.hpp  meson.build  owf.cpp  owf_tvs.hpp  universal_hashing_tvs.hpp  vole.cpp
ref/tools/: crypto_sign_generator.py  gen_frob_matrices.c  gen_lynx_consts.py  sig_size.py  update_sig_sizes.py
